# gidra

./: .gitmodules  pyproject.toml
gidra/: __init__.py  __main__.py  proto.py  reader.py
gidra/mhycrypt/: __init__.py  mt64.py
gidra/plugins/: change_account.py  change_nickname.py  commands.py  windseed_blocker.py
gidra/proxy/: __init__.py  cmdids.py  handshake.py  kcp_socket.py  packet.py
python-kcp/: .gitattributes  .gitignore  LICENSE  README.md  requirements.txt  setup.py  setup.sh
python-kcp/lkcp/: __init__.py  compat.h  core.pyx  ikcp.c  ikcp.h  kcp.py
python-kcp/test/: latencysm.py  testkcp.py  utils.py
